client/src/pages/Drill/Drill.css
/* Root Variables and Global Styles */
:root {
    --bg-color: #f4f4f9;
    --header-color: #503291;
    --card-bg-color: #ffffff;
    --text-color-light: #f7f7f7;
    --text-color-dark: #333333;
    --card-color: #6758A0;
    --primary-color: #503291;
    --stat-card-bg: #FFD700;
    --stat-card-text-color: #333333;
    --accent-color: #FFD700;
    --hover-color: #3d2671;
    --box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
}

/* Base Component Styles */
.drill-container,
.player-container,
.court-container,
.extra-stats-container,
.tempo-container,
.timer-container,
.TempoTimer,
.Popup,
.ShotPopup,
.CancelButton,
.AvgTempoDisplay {
    box-shadow: var(--box-shadow);
}

.player-container,
.court-container,
.extra-stats-container,
.PopupPlayerCircle {
    background: var(--card-color);
    border-radius: 8px;
    padding: 4%;
    color: var(--text-color-dark);

}

/* Drill Container */
.drill-container {
    display: flex;
    flex-direction: column;
    height: 90vh;
    width: 100%;
}

/* Player and Court Container */
.player-and-court-container {
    display: flex;
    /* background-color: yellow; */
    /* flex: 1; */
    padding: 2%;
    gap: 2%;
    height: 55%;
    width: auto;
}

/* Player Container */
.player-container {
    display: flex;
    /* flex: 1; */
    width: 50%;
    height: 100%;
}

/* Court Container */
.court-container {
    /* flex: 2; */
    display: flex;
    justify-content: center;
    align-items: center;
    /* Take up 1/2 of the screen */
    width: 50%;
    height: 100%;
    padding: 0%;
}

/* Extra Stats Container */
.extra-stats-container {
    display: flex;
    flex-wrap: wrap;
    justify-content: center;
    gap: 5%;
    margin: 0%;
    padding: 0%;
    height: 20%;
    background-color: var(--primary-color);
    /* background-color: red; */
}

/* Extra Stats */
.ExtraStats {
    display: flex;
    margin: .2%;
    padding: 1%;
    justify-content: center;
    align-items: center;
    border: 1px solid #000;
    border-radius: 2%;
    background-color: #6758A0;
    color: white;
    cursor: pointer;
    transition: all 0.3s;
    width: 25%;
    font-size: 75%;
}

.ExtraStats:active {
    transform: scale(0.95);
}

/* Tempo Container */
.tempo-container {
    /* background-color: pink; */
    display: flex;
    justify-content: space-between; /* Space out the buttons evenly */
    padding: 0%; /* Add padding to the container */
    height: 50%;
}


/* Tempo Timer */
.TempoTimer {
    
    font-size: 150%;
    margin: 10%;
    padding: 5%;
    border: 1px solid #000;
    border-radius: 5px;
    display: inline-block;
    background-color: #fff;
    color: #333;
    width: 85%;
    text-align: center;
}

.TempoButton {
    padding: 5% 0%; /* Adjust padding to give more space inside the button */
    font-size: 100%; /* Adjust font size for better readability */
    margin: .5% 1%; /* Add some margin between buttons */
    border-radius: 8px; /* Match border-radius to other elements like the player-container */
    background-color: var(--primary-color); /* Use the primary purple color */
    color: var(--text-color-light); /* Use the light color for text */
    cursor: pointer;
    box-shadow: var(--box-shadow); /* Use the same box-shadow for consistency */
    transition: background-color 0.2s ease; /* Smooth transition for hover effects */
    border: none; /* Remove any borders */
    /* Allow the width to be determined by content and padding */
    flex-grow: 1; /* Allow the buttons to grow to fill the space */
    /* Additional styles for interaction states */
    width: 10%;
    height: 95%;
}

.TempoButton:hover {
    background-color: var(--hover-color); /* Change background color on hover */
}

.TempoButton.start {
    background-color: #4CAF50; /* Use a green color for starting the tempo */
}

.TempoButton.stop {
    background-color: #f44336; /* Use a red color for stopping the tempo */
}

.TempoButton:active {
    transform: scale(0.98); /* Slightly reduce the scale for a press effect */
}

.TempoButton.disabled, 
.TempoButton:disabled {
    background-color: #ccc; /* Gray color for disabled state */
    color: #666; /* Darker gray for text in disabled state */
    cursor: not-allowed;
    opacity: 0.5; /* Reduce opacity for disabled state */
    pointer-events: none; /* Disable pointer events for disabled state */
}

/* Last Tempo Display */
.LastTempoDisplay {
    font-size: .25%; /* Adjust font size to match TempoButton */
    color: var(--text-color-dark); /* Use the dark text color for readability */
    margin: 0 0; /* Standardize margin around the display */
    padding: 1%; /* Provide some padding */
    background-color: var(--card-bg-color); /* Use the card background color */
    border-radius: 8px; /* Round the corners to match the design */
    text-align: top;
    width: 100%; /* Adjust width to content */
    box-shadow: var(--box-shadow); /* Apply consistent box-shadow */
}

/* Container for the Cancel button */
.cancel-button-container {
    display: flex;
    justify-content: center; /* Centers the button horizontally */
    align-items: center; /* Aligns the button vertically */
    width: 100%; /* Takes full width of its parent container */
    margin-top: 5%; /* Adds some space above the button */
}

/* Cancel Button */
.CancelButton {
    padding: 10% 10%; /* Increase padding for a larger button */
    font-size: 100%; /* Increase font size for visibility */
    background-color: #d49b46; /* A consistent red color for cancel actions */
    color: var(--text-color-light); /* White text for better contrast */
    border-radius: 8px; /* Match border-radius to other elements */
    margin: 15% 5%; /* Consistent margin with TempoButton */;
    width: 100%; /* Adjust width to content and padding */
    cursor: pointer;
    transition: background-color 0.2s ease; /* Smooth transition for hover effects */
    border: none; /* Remove the border */
    box-shadow: var(--box-shadow); /* Consistent shadow with other elements */
}
/* ... */

